--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <ul>
       <li><strong>Someone</strong> said something</li>
       <li><strong>Someone</strong> did something</li>
-      <li><strong>Someone</strong> said something</li>
+      <li><strong>Someone</strong> farted</li>
       <li><strong>Someone</strong> said something</li>
       <li><strong>Someone</strong> did something</li>
       <li><strong>Someone</strong> said something</li>
